Fixes on Editor and Index for Load json

--- a/AP_levelEditor/index.html
+++ b/AP_levelEditor/index.html
@@ -73,7 +73,7 @@
     <div class="scene card">
 	<!-- here required form for save background image -->
 	<form id="uploadimage" action="savebg.php" method="post" enctype="multipart/form-data">
-      <input type="file" id="getval" name="background-image" onchange="appEditor.readURL(event)" /><br/><br/>
+      <input type="file" id="getval" name="background-image"/><br/><br/>
 	</form>
 	  <!-- layer data -->
 	  <div id='layerData'>
