Improvement of design level.php
Improvement of level.php file for json files design

--- a/AP_levelEditor/index.html
+++ b/AP_levelEditor/index.html
@@ -56,7 +56,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="levels.php">Load Levels</a></li>
           <li><a href="#" onclick='displayPopup()'>Save</a></li>
-          <li><a href="#">New</a></li>
+          <li><a href="#">Play</a></li>
           <li class="logo"><a href="#">Angry Pigs Level Editor<img src="img/logo.png" alt="Angry Pigs Editor"></a></li>
       </ul>
   </nav>
